WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23476
HTTP redirect should make application cache updating fail
https://bugs.webkit.org/show_bug.cgi?id=23476
Summary
HTTP redirect should make application cache updating fail
Alexey Proskuryakov
Reported
2009-01-22 08:57:28 PST
4. <404/410 handing for manifests> 5. Otherwise, if fetching the manifest fails in some other way (e.g. the server returns another 4xx or 5xx response or equivalent, or there is a DNS error, or the connection times out, or the user cancels the download, or the parser for manifests fails when checking the magic signature), or if the server returned a redirect, or if the resource is labeled with a MIME type other than text/cache-manifest, then run the cache failure steps. ... 16.4 If the previous step fails (e.g. the server returns a 4xx or 5xx response or equivalent, or there is a DNS error, or the connection times out, or the user cancels the download), or if the server returned a redirect, then run the first appropriate step from the following list: * If the URL being processed was flagged as an "explicit entry" or a "fallback entry" Run the cache failure steps.
Attachments
proposed patch
(8.73 KB, patch)
2009-01-22 11:06 PST
,
Alexey Proskuryakov
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2009-01-22 10:01:39 PST
I have a patch ready, but cannot upload it due to a Bugzilla internal error yet.
Alexey Proskuryakov
Comment 2
2009-01-22 11:06:23 PST
Created
attachment 26934
[details]
proposed patch
Anders Carlsson
Comment 3
2009-01-28 10:42:49 PST
Comment on
attachment 26934
[details]
proposed patch r=me
Alexey Proskuryakov
Comment 4
2009-01-29 00:36:41 PST
Committed revision 40356.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug