        Reviewed by Anders Carlsson.

https://bugs.webkit.org/show_bug.cgi?id=23476
        HTTP redirect should make application cache updating fail

        Tests: http/tests/appcache/manifest-redirect.html
               http/tests/appcache/resource-redirect.html

        * loader/appcache/ApplicationCacheGroup.cpp:
        (WebCore::ApplicationCacheGroup::didReceiveResponse):
        (WebCore::ApplicationCacheGroup::didReceiveManifestResponse):
        Fail if response code isn't 2xx.



Canonical link: https://commits.webkit.org/32539@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40356 268f45cc-cd09-0410-ab3c-d52691b4dbfc